overlay/dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  selector:
    app: example-app
  type: ClusterIP
  ports:
    - name: example-app
      protocol: TCP
      port: 80
